[package]
name = "wassup"
version = "0.1.0"
edition = "2021"

[dependencies]
wasmer = { version = "2.2.1", features = ["sys", "wat", "default-llvm", "default-universal", "std"], default-features = false }
wasmer-types = "2.2.1"
loupe = "0.1.3"
wasmer-compiler-llvm = "2.2.1"
wasmer-engine-universal = "2.2.1"
criterion = "0.3.5"
hexdump = "0.1.1"
wasi = "0.10"
libc = "0.2.121"
rand = "0.8.5"
dashmap = "5.2.0"
bytes = "1.1.0"
crossbeam-queue = "0.3.5"
